# mlops2_with_dagster

./: .gitignore  mlflow.db  pyproject.toml  setup.cfg  setup.py  variousruns.txt
artifacts/: encoder.dot  infer1_dataset.dot  infer1_test.dot  infer2_dataset.dot  infer2_dataset_scratch.dot  target.dot  training.dot  transdataset.dot  transtest.dot  transtrain.dot
assets/: __init__.py
configs/: resources.yaml
intermediate_data/: encoder.joblib
mlops2_with_dagster/: __init__.py  encoder_pipeline.py  features_pipeline.py  ml_hamilton.py  model_pipeline.py  oldgraphparticipants.py  opsgraphparticipants.py  participants.py  participants.py.old1  preprocess.py  utils.py  wronginitassetsparticipants.py
notebooks/: encoder.ipynb  encoder_modified.ipynb  infer_from_scratch.ipynb  infer_from_scratch_modified.ipynb  infer_from_store.ipynb  new.ipynb  target_extractor.ipynb  target_extractor_modified.ipynb  training.ipynb  training_modified.ipynb  transform.ipynb  transform_modified.ipynb
notebooks/artifacts/: infer1_test.dot  transtrain.dot
notebooks/mlruns/0/: meta.yaml
results/: infer1_test.joblib
warehouse/: encoders.joblib  target.parquet  transformed_data.parquet
warehouse/8c627f38-ede9-47f1-937b-a054df3a6065/encoder_op/: encoders.parquet
