[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.dagster]
module_name = "mlops2_with_dagster"


[tool.poetry]
name = "mlops2_with_dagster"
version = "0.1.0"
description = "Provides an end to end pipelining solution"
authors = ["Rahul Dave <>"]
license = "MIT"



[tool.poetry.dependencies]
python = ">=3.10.11, <3.11"
mlflow = "2.3.0"
dagster = ">=1.1"
pandas = "*"
tensorflow-io-gcs-filesystem = ">=0.23.0"
numpy = "^1.20"
tensorflow = "^2.11.0"
scikit-learn= "1.2.2"
poetry = "^1.2"
poethepoet = "0.19.0"
dagstermill = "*"
dagit="*"
sf-hamilton="*"